Bug 1762378 Allow to use AV1 in mp4 container r=alwu

Claim support for video/mp4 media container when codec is missing as it can contain AV1 media.

Differential Revision: https://phabricator.services.mozilla.com/D144160